# isw

./: .gitlab-ci.yml  .rustfmt.toml  Cargo.toml  default.nix  license  readme.md
src/: app.rs  cli.rs  intervals.rs  lib.rs  main.rs  stopwatch.rs  tui.rs
