[package]
name = "isw"
version = "0.2.0"
edition = "2021"
authors = ["Thom Cameron <thomcm@proton.me>"]
description = "a simple terminal stopwatch application"
readme = "readme.md"
license-file = "license.txt"
homepage = "https://gitlab.com/thom-cameron/isw"
repository = "https://gitlab.com/thom-cameron/isw"

[dependencies]
clap = { version = "4.5.17", features = ["derive"] }
crossterm = "0.28.1"
ratatui = "0.28.1"
